<resources>
    <string name="app_name">EdxClone</string>
    <string name="edx_logo_text">edxlogo</string>
    <string name="free_courses_from_nthe_world_s_best_nuniversities_in_your_n_pocket">Free courses from the world\'s best universities in your  pocket.</string>
    <string name="search_courses_edx">Search Courses</string>
    <string name="search_image_view">search_image</string>
    <string name="log_in_text_main">Log In</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_for_cou_text">Search for cou...</string>
    <string name="toolbar_search_text">toolbarsearch</string>
    <string name="course_pic_in_text">course_pic</string>
    <string name="verified_text">VERIFIED</string>
    <string name="conpany_name_field">Conpany name</string>
    <string name="introduction_too_python_text">Introduction too Python..</string>
    <string name="current_time_text">Current</string>
</resources>
