<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="10dp">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/dis_img"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/mountain"
                android:contentDescription="@string/course_pic_in_text"/>

            <LinearLayout
                android:id="@+id/dis_linear"
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:layout_below="@+id/dis_img"
                android:background="@android:color/holo_green_dark"
                android:gravity="right"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/verified_text"
                    android:textColor="@android:color/white" />

            </LinearLayout>


            <TextView
                android:id="@+id/dis_company"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/dis_linear"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/conpany_name_field"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dis_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/dis_company"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="3dp"
                android:text="@string/introduction_too_python_text" />

            <TextView
                android:id="@+id/dis_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/dis_title"
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/current_time_text" />

            <View
                android:id="@+id/divider7"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_below="@+id/dis_time"
                android:background="@android:color/holo_green_dark" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>


</RelativeLayout>