<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="31dp"
        android:layout_marginTop="90dp"
        android:contentDescription="@string/edx_logo_text"
        app:srcCompat="@drawable/edxlogo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="226dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/imageView"
        android:layout_marginTop="195dp"
        android:text="@string/free_courses_from_nthe_world_s_best_nuniversities_in_your_n_pocket"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="47dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/imageView"
        android:layout_marginBottom="184dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/search_course_bg"
        android:orientation="horizontal"
        android:weightSum="5">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/search_image_view"
            app:srcCompat="@mipmap/ic_search" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:hint="@string/search_courses_edx"
            android:inputType="text"
            android:textColorHint="@color/colorPrimary" />
    </LinearLayout>

    <Button
        android:id="@+id/create_btn"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/imageView"
        android:layout_marginBottom="45dp"
        android:background="@drawable/create_account_btn_bg"
        android:text="Create your\nAccount\"
        android:textAllCaps="false"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/loginbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:background="@drawable/search_course_bg"
        android:text="Log In"
        android:layout_marginRight="30dp"
        android:layout_marginTop="452dp"
        android:textAllCaps="false" />


</RelativeLayout>